--- a/index.html
+++ b/index.html
@@ -24,43 +24,72 @@
         <p>Welcome!</p>
     </header>
 
+    <h2 id="about me" class="test">About Me:</h2>
     <div class="am-con">
         <div>
-            <h2 id="about me" class="test">About Me:</h2>
+            <!-- <h2 id="about me" class="test">About Me:</h2> -->
             <p>Hello there, my name is Cody J. Craig. I am an aspiring web developer, of course, you know that much.
                 What you don't know, is that I love music and dance. I often tell people that I think of myself as a dancer first and a man second.
-                Aside from dance. My other hobbies include gaming, painting miniatures and watching anime.</p>
+                Aside from dance. My other hobbies include gaming, painting miniatures and watching anime.
+            </p>
+            <p>
+               Resume: <a href="https://docs.google.com/document/d/1ncR0gykz9GtKJCz5a5-djoDg-QGNvHmohWYKbIhqorw/edit?usp=sharing">Cody J. Craig</a>
+            </p>
         </div>
     </div>
 
     <section>
+        <h2 id="portfolio" class="test">My Portfolio:</h2>
         <container class="p-con">
-            <h2 id="portfolio" class="test">My Portfolio:</h2>
+            <!-- <h2 id="portfolio" class="test">My Portfolio:</h2> -->
             <div class="row">
                 <div class="column">
-                    <img id="project1" src="assets/images/project1.jpg" alt="">
-                    <p class="p1">Project 1: coming soon...</p>
+                    <img id="project1" src="assets/images/password.png" alt="">
+                    <p class="p1">Password Generator</p>
+                    <ul class="homework">
+                        <a href="https://github.com/TheMimmzyy/PasswordGen">Repo</a>
+                        <a href="https://themimmzyy.github.io/PasswordGen/">App</a>
+                    </ul>
+                    
                 </div>
                 <div class="column">
-                    <img id="project2" src="assets/images/project2.jpg" alt="">
-                    <p>Project 2: coming soon...</p>
+                    <img id="project2" src="assets/images/workday.png" alt="">
+                    <p>Workday Scheduler</p>
+                    <ul class="homework">
+                        <a href="https://github.com/TheMimmzyy/Workday-Scheduler">Repo</a>
+                        <a href="https://themimmzyy.github.io/Workday-Scheduler/index.html">App</a>
+                    </ul>
                 </div>
                 <div class="column">
-                    <img id="project3" src="assets/images/project3.jpg" alt="">
-                    <p>Project 3: coming soon...</p>
+                    <img id="project3" src="assets/images/weather.png" alt="">
+                    <p>Weather Dashboard</p>
+                    <ul class="homework">
+                        <a href="https://github.com/TheMimmzyy/Weather-Dash">Repo</a>
+                        <a href="https://themimmzyy.github.io/Weather-Dash/">App</a>
+                    </ul>
                 </div>
                 <div class="column">
-                    <img id="project4" src="assets/images/project4.jpg" alt="">
-                    <p>Project 4: coming soon...</p>
+                    <img id="project4" src="assets/images/makemyday.png" alt="">
+                    <p>Make My Day</p>
+                    <ul class="homework">
+                        <a href="https://github.com/TheMimmzyy/First_Project">Repo</a>
+                        <a href="https://themimmzyy.github.io/First_Project/Home/index.html">App</a>
+                    </ul>
                 </div>
             </div>
         </container>
     </section>
 
     <section>
+        <h2 id="contact me" class="test">Contact Me:</h2>
         <div class="c-con">
-           <h2 id="contact me" class="test">Contact Me:</h2>
-           <p>email: cjc3481@gmail.com</p>
+           <!-- <h2 id="contact me" class="test">Contact Me:</h2> -->
+          <ul class="contact">
+              <li>Email: cjc3481@gmail.com</li>
+              <li>Phone: (970)355-9187</li>
+              <a href="https://github.com/TheMimmzyy"><li>Github: TheMimmzyy</li></a>
+              <a href="https://www.linkedin.com/in/cody-craig-072754189/"><li>Linkedin: Cody Craig</li></a>
+          </ul>
         </div>
     </section>
 
