--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
             <!-- <h2 id="portfolio" class="test">My Portfolio:</h2> -->
             <div class="row">
                 <div class="column">
-                    <img id="project1" src="assets/images/password.png" alt="">
-                    <p class="p1">Password Generator</p>
+                    <img id="project1" src="assets/images/techblog.png" alt="">
+                    <p class="p1">TechBlog</p>
                     <ul class="homework">
-                        <a href="https://github.com/TheMimmzyy/PasswordGen">Repo</a>
-                        <a href="https://themimmzyy.github.io/PasswordGen/">App</a>
+                        <a href="https://github.com/TheMimmzyy/techBlog">Repo</a>
+                        <a href="https://evening-cove-29628.herokuapp.com/">App</a>
                     </ul>
                     
                 </div>
                 <div class="column">
-                    <img id="project2" src="assets/images/workday.png" alt="">
-                    <p>Workday Scheduler</p>
+                    <img id="project2" src="assets/images/notes.png" alt="">
+                    <p>Note Taker</p>
                     <ul class="homework">
-                        <a href="https://github.com/TheMimmzyy/Workday-Scheduler">Repo</a>
-                        <a href="https://themimmzyy.github.io/Workday-Scheduler/index.html">App</a>
+                        <a href="https://github.com/TheMimmzyy/Note_Taker">Repo</a>
+                        <a href="https://safe-castle-83214.herokuapp.com/">App</a>
                     </ul>
                 </div>
                 <div class="column">
@@ -69,11 +69,11 @@
                     </ul>
                 </div>
                 <div class="column">
-                    <img id="project4" src="assets/images/makemyday.png" alt="">
-                    <p>Make My Day</p>
+                    <img id="project4" src="assets/images/agartha.png" alt="">
+                    <p>Agarthan Adventures</p>
                     <ul class="homework">
-                        <a href="https://github.com/TheMimmzyy/First_Project">Repo</a>
-                        <a href="https://themimmzyy.github.io/First_Project/Home/index.html">App</a>
+                        <a href="https://github.com/macktrain/Agarthan-Adventures">Repo</a>
+                        <a href="https://agarthan-adventures.herokuapp.com/">App</a>
                     </ul>
                 </div>
             </div>
